{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 48,
  "lineage": "b19600f4-f53c-e00e-edaf-1e61eae5d8bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099541382ab29c41a",
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:elastic-ip/eipalloc-099541382ab29c41a",
            "domain": "vpc",
            "id": "eipalloc-099541382ab29c41a",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-76-2-192.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.2.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elasic IP"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Elasic IP",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:internet-gateway/igw-0425bd48413bf35e0",
            "id": "igw-0425bd48413bf35e0",
            "owner_id": "009160061336",
            "tags": {
              "Name": "prod IGW"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "prod IGW",
              "Owner": "myCompany",
              "Project": "DFE"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099541382ab29c41a",
            "association_id": "eipassoc-0f77ad1f65b097b91",
            "connectivity_type": "public",
            "id": "nat-014dd48fd8f58f86e",
            "network_interface_id": "eni-00c75bee3405b7b9c",
            "private_ip": "10.10.1.108",
            "public_ip": "52.76.2.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4d6b60cec9c7d65",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "gw NAT",
              "Owner": "myCompany",
              "Project": "DFE"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:route-table/rtb-018e9562cb06fbfd1",
            "id": "rtb-018e9562cb06fbfd1",
            "owner_id": "009160061336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014dd48fd8f58f86e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "private route table",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:route-table/rtb-0200f44d58d2e09b1",
            "id": "rtb-0200f44d58d2e09b1",
            "owner_id": "009160061336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0425bd48413bf35e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "public route table",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a71367e324c58fa",
            "route_table_id": "rtb-018e9562cb06fbfd1",
            "subnet_id": "subnet-04defc218db1dd7bf"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03764a8b2c911bbba",
            "route_table_id": "rtb-018e9562cb06fbfd1",
            "subnet_id": "subnet-01999c875ae9ef653"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc54c1eb1a050df",
            "route_table_id": "rtb-018e9562cb06fbfd1",
            "subnet_id": "subnet-0173b2359d51ea51c"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf0c45793f24f0e",
            "route_table_id": "rtb-0200f44d58d2e09b1",
            "subnet_id": "subnet-0e4d6b60cec9c7d65"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009bc6257de760fbe",
            "route_table_id": "rtb-0200f44d58d2e09b1",
            "subnet_id": "subnet-0b08fa7453caa5c5c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e4301b58f59c4d",
            "route_table_id": "rtb-0200f44d58d2e09b1",
            "subnet_id": "subnet-04779d645b8f6dc31"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-04defc218db1dd7bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04defc218db1dd7bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "private Subnet 1",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-01999c875ae9ef653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01999c875ae9ef653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "private Subnet 2",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0173b2359d51ea51c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0173b2359d51ea51c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 3"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "private Subnet 3",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0e4d6b60cec9c7d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4d6b60cec9c7d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Public Subnet 1",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0b08fa7453caa5c5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08fa7453caa5c5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Public Subnet 2",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-04779d645b8f6dc31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04779d645b8f6dc31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Public Subnet 3",
              "Owner": "myCompany",
              "Project": "DFE"
            },
            "vpc_id": "vpc-08f65472e075d4bd3"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Pro-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:vpc/vpc-08f65472e075d4bd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07c480a9059fd90e3",
            "default_route_table_id": "rtb-0ece41a2b3fb92794",
            "default_security_group_id": "sg-0ee05105d0d3bd5f3",
            "dhcp_options_id": "dopt-0f6985a5765a4b343",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f65472e075d4bd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ece41a2b3fb92794",
            "owner_id": "009160061336",
            "tags": {
              "Name": "Production VPC"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Production VPC",
              "Owner": "myCompany",
              "Project": "DFE"
            }
          }
        }
      ]
    }
  ]
}